Fix invisible window

--- a/style.css
+++ b/style.css
@@ -402,11 +402,11 @@ li a:hover {
     margin-top: 10px;
     padding: 8px;
     border-radius: 5px;
-    
+    visibility: hidden;
 }
 
 .update__info li {
-    
+    pointer-events: none;
     list-style-type: circle;
     color: rgb(255, 238, 0);
 }
